PageRowRDD is no longer an RDD (but can be implicitly cast into it): cache/checkpointing management is tricking for a thin RDD wrapper which is itself an RDD Fix a bug in HttpUtils that cause double encoding of parameter